Arithmetic: the interpmetric option is not ignored
Until now, in Arithmetic we were blindly ignoring all command-line options
related to tesselation. This included the `interpmetric' option which is
used by Arithmetic's `interpolate-medianngb' operator!

With this commit, to fix this, all the tesselation options are still
ignored, except this option.

This bug was found by Zahra Sharbaf.

This fixes bug #57921.

--- a/NEWS
+++ b/NEWS
@@ -63,6 +63,7 @@ See the end of the file for license conditions.
 ** Bugs fixed
   bug #57300: MakeCatalog memory crash when input dataset has units.
   bug #57301: MakeCatalog using river sum instead of mean times by clump area.
+  bug #57921: Arithmetic's interpolation operator not reading metric.
 
 
 
